fixed contact-form-wrap responsive width

--- a/styles/style.css
+++ b/styles/style.css
@@ -650,7 +650,7 @@ figure.img-contain {
 }
 
 #contact-form-wrap {
-  width: 40%;
+  width: 50%;
   margin: 40px auto 20px auto;
 }
 
